--- a/ARM/GUI/MkBootImg/AndroidManifest.xml
+++ b/ARM/GUI/MkBootImg/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:minSdkVersion="21"
         android:targetSdkVersion="23" />
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
